# cc_terraria-cheat

./: CMakeLists.txt
cc_cheat/: CMakeLists.txt
cc_cheat/include/: internal.hpp
cc_cheat/src/: internal.cpp
signature_crypt/: CMakeLists.txt  main.cpp
src/: dllmain.cpp  offsets.hpp  vars.hpp
src/dependencies/minhook/: libMinHook.x86.lib
src/utilities/: console.cpp  console.hpp  hooks.cpp  hooks.hpp  menu.cpp  menu.hpp
